--- a/index.html
+++ b/index.html
@@ -16,6 +16,20 @@
     <title>Porfalio de HAMP</title>
   </head>
   <body>
-    <h1>Test !!!</h1>
+    <!-- INICIO HEADER -->
+    <nav class="nav">
+      <ul class="nav-list">
+        <li>
+          <a href="#">Inicio</a>
+        </li>
+        <li>
+          <a href="#">Sobre HAMP</a>
+        </li>
+        <li>
+          <a href="#">Proyectos</a>
+        </li>
+      </ul>
+    </nav>
+    <!-- FIN HEADER -->
   </body>
 </html>
