(html-css) creando sección main

--- a/index.html
+++ b/index.html
@@ -31,5 +31,17 @@
       </ul>
     </nav>
     <!-- FIN HEADER -->
+
+    <!-- INICIO MAIN -->
+    <section class="main">
+      <div>
+        <h1>Hola,<br />bienvenido!</h1>
+        <p>Crea soluciones para tu negocio!</p>
+        <a href="#">
+          <button class="call-to-action">Ver mis proyectos 👇</button>
+        </a>
+      </div>
+    </section>
+    <!-- FIM MAIN -->
   </body>
 </html>
