(html-css) creando sección sobre

--- a/index.html
+++ b/index.html
@@ -43,5 +43,24 @@
       </div>
     </section>
     <!-- FIM MAIN -->
+
+    <!-- INICIO SOBRE -->
+    <section class="about">
+      <div>
+        <h2>Sobre</h2>
+        <p>
+          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Iure
+          corrupti vel quod enim cupiditate quam inventore. Sequi esse alias
+          facere ipsum consequatur accusantium asperiores, labore est soluta.
+          <br /><br />
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad distinctio
+          earum architecto corrupti aliquid, eius impedit obcaecati, nulla
+          maiores laboriosam reiciendis in voluptate tenetur mollitia
+          accusantium optio unde, quia numquam.
+        </p>
+      </div>
+      <img src="img/foto-pc.png" alt="Foto HAMP programando" />
+    </section>
+    <!-- FIM SOBRE -->
   </body>
 </html>
