(html-css) creando sección proyectos

--- a/index.html
+++ b/index.html
@@ -62,5 +62,23 @@
       <img src="img/foto-pc.png" alt="Foto HAMP programando" />
     </section>
     <!-- FIM SOBRE -->
+
+    <!-- INICIO PROYECTOS -->
+    <section class="projects">
+      <h2>Mis proyectos</h2>
+      <p>Descubre mis últimos proyectos</p>
+
+      <div class="project-list">
+        <img src="img/projeto1.png" alt="Foto de proyecto 1" />
+        <img src="img/projeto2.png" alt="Foto de proyect 2" />
+        <img src="img/projeto3.png" alt="Foto de proyect 3" />
+      </div>
+
+      <div class="project-list">
+        <img src="img/projeto2.png" alt="Foto de proyecto 2" />
+        <img src="img/projeto1.png" alt="Foto de proyecto 1" />
+        <img src="img/projeto3.png" alt="Foto de proyecto 3" />
+      </div>
+    </section>
   </body>
 </html>
