--- a/index.html
+++ b/index.html
@@ -79,6 +79,16 @@
         <img src="img/projeto1.png" alt="Foto de proyecto 1" />
         <img src="img/projeto3.png" alt="Foto de proyecto 3" />
       </div>
+      <button class="action">Hacer un presupuesto</button>
     </section>
+
+    <!-- INICIO FOOTER -->
+    <footer>
+      <h3>
+        <a href="#">HAMP</a>
+      </h3>
+      <p>Todos los derechos reservados!</p>
+    </footer>
+    <!-- FIM FOOTER -->
   </body>
 </html>
