(html-css) creando sección navegación

--- a/index.html
+++ b/index.html
@@ -20,20 +20,20 @@
     <nav class="nav">
       <ul class="nav-list">
         <li>
-          <a href="#">Inicio</a>
+          <a href="#home">Inicio</a>
         </li>
         <li>
-          <a href="#">Sobre HAMP</a>
+          <a href="#sobre">Sobre HAMP</a>
         </li>
         <li>
-          <a href="#">Proyectos</a>
+          <a href="#projetos">Proyectos</a>
         </li>
       </ul>
     </nav>
     <!-- FIN HEADER -->
 
     <!-- INICIO MAIN -->
-    <section class="main">
+    <section id="home" class="main">
       <div>
         <h1>Hola,<br />bienvenido!</h1>
         <p>Crea soluciones para tu negocio!</p>
@@ -45,7 +45,7 @@
     <!-- FIM MAIN -->
 
     <!-- INICIO SOBRE -->
-    <section class="about">
+    <section id="sobre" class="about">
       <div>
         <h2>Sobre</h2>
         <p>
@@ -64,7 +64,7 @@
     <!-- FIM SOBRE -->
 
     <!-- INICIO PROYECTOS -->
-    <section class="projects">
+    <section id="projetos" class="projects">
       <h2>Mis proyectos</h2>
       <p>Descubre mis últimos proyectos</p>
 
